--- a/src/app/components/nav/nav.component.sass
+++ b/src/app/components/nav/nav.component.sass
@@ -2,6 +2,7 @@
     background-color: #96C2DB
     display: flex
     justify-content: center
+    box-shadow: 0 2px 11px rgba(150, 194, 219, 0.9)
     .add-column 
         font-size: 1.2em
         margin-left: auto
