--- a/src/app/components/task-card/task-card.component.html
+++ b/src/app/components/task-card/task-card.component.html
@@ -9,10 +9,7 @@
         <div class="card-information">
             <div class="card-title-wrapper">
                 <h5>{{item.content.name}}</h5>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512">
-                    <path
-                        d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z" />
-                </svg>
+                <app-card-btn />
             </div>
             <p>Create website for your company</p>
             <p>3 days ago</p>
