Updated global styles

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,9 @@
 @import styles/typography
 body
     background-color: #f8f8f8
+    bs-datepicker-container
+        z-index: 9999
+        .bs-datepicker-head
+            background-color: #96C2DB !important
+        .selected
+            background-color: #96C2DB !important
