--- a/src/app/components/card-btn/card-btn.component.html
+++ b/src/app/components/card-btn/card-btn.component.html
@@ -1,15 +1,13 @@
 <div class="btn-group" dropdown>
-    <div dropdownToggle class="more-btn"
-            aria-controls="dropdown-basic">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512">
-                <path
-                    d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z" />
-            </svg>
-        </div>
-    <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
-        role="menu" aria-labelledby="button-basic">
-      <li role="menuitem"><a class="dropdown-item" href="#">Details</a></li>
-      <li role="menuitem"><a class="dropdown-item" href="#">Edit</a></li>
-      <li role="menuitem"><a class="dropdown-item" href="#">Delete</a></li>
+    <div dropdownToggle class="more-btn" aria-controls="dropdown-basic">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512">
+            <path
+                d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z" />
+        </svg>
+    </div>
+    <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
+        <li role="menuitem" class="dropdown-item">Details</li>
+        <li role="menuitem" class="dropdown-item">Edit</li>
+        <li role="menuitem" class="dropdown-item">Delete</li>
     </ul>
-  </div>
+</div>
