--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -3,6 +3,7 @@
         <div class="column-wrapper" *ngFor="let data of columnData">
             <app-column-title [title]="data.title" (editedTitle)="handleEdit($event)" />
             <app-task-card [data]="data" />
+            <app-add-new-task />
         </div>
     </div>
 </main>
