updated styless for column-title

--- a/src/app/components/column-title/column-title.component.sass
+++ b/src/app/components/column-title/column-title.component.sass
@@ -6,7 +6,7 @@
     border-radius: 1em
     white-space: nowrap
     height: 4em
-    box-shadow: 0 0 2em rgba(0, 0, 0, 0.2)
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.2)
     background-color: #fff
     .title
         padding: 0 0.4em
