--- a/src/app/components/create-edit-modal/create-edit-modal.component.html
+++ b/src/app/components/create-edit-modal/create-edit-modal.component.html
@@ -7,22 +7,37 @@
         </button>
     </div>
     <div class="modal-body">
-        <form>
+        <form [formGroup]="taskCardForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label for="title">Title</label>
-                <input type="text" class="form-control" placeholder="Enter Title" id="title">
+                <input type="text" class="form-control" placeholder="Enter Title" id="title" formControlName="name">
                 <label for="description">Description</label>
-                <input type="text" class="form-control" placeholder="Enter Description" id="description">
-                <label for="dueTo">Due to</label>
-                <input type="text" class="form-control" placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true,
-                showWeekNumbers: false }" id="dueTo">
-                <label for="tags">Tags</label>
-                <input type="text" class="form-control" placeholder="Enter Tags" id="tags" [(ngModel)]="tag"
-                    [ngModelOptions]="{standalone: true}" (keydown.enter)="onTagsChange(tag)">
-                <ul>
-                    <li *ngFor="let tag of tags">{{tag}}</li>
-                </ul>
+                <input type="text" class="form-control" placeholder="Enter Description" id="description" formControlName="description">
+                <div class="inputs-wrapper-flex">
+                    <div>
+                        <label for="dueTo">Due to</label>
+                        <input type="text" class="form-control" placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true,
+                        showWeekNumbers: false }" id="dueTo" formControlName="dueTo">
+                    </div>
+                    <div>
+                        <label for="tag">Add tag</label>
+                        <div class="input-with-suffix">
+                            <input type="text" class="form-control" placeholder="Enter Tag" id="tag" [(ngModel)]="tag"
+                                [ngModelOptions]="{standalone: true}">
+                            <button class="btn btn-primary" type="button" (click)="onTagsChange($event, tag)">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                    <path
+                                        d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" />
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <div class="card-tag-wrapper">
+                <h6 *ngFor="let tag of tags" class="card-tag">{{tag}}</h6>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </div>
