--- a/src/app/components/task-card/task-card.component.html
+++ b/src/app/components/task-card/task-card.component.html
@@ -3,16 +3,15 @@
         [dndEffectAllowed]="'move'" (dndCanceled)="onDragged(item, data!.draggableItem, 'none')"
         (dndMoved)="onDragged(item, data!.draggableItem, 'move')">
         <div class="card-tag-wrapper">
-            <h6 class="card-tag">Angular</h6>
-            <h6 class="card-tag">Angular</h6>
+            <h6 class="card-tag" *ngFor="let tag of item.content.tags">{{tag}}</h6>
         </div>
         <div class="card-information">
             <div class="card-title-wrapper">
                 <h5>{{item.content.name}}</h5>
-                <app-card-btn />
+                <app-card-btn [cardTaskData]="item" (operation)="handleOperation($event)" />
             </div>
-            <p>Create website for your company</p>
-            <p>3 days ago</p>
+            <p>{{item.content.description}}</p>
+            <p>{{item.content.createdOn | timestamp}}</p>
         </div>
     </div>
     <div class="card placeholder dndPlaceholder" dndPlaceholderRef>
