--- a/src/app/components/create-edit-modal/create-edit-modal.component.html
+++ b/src/app/components/create-edit-modal/create-edit-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-container">
     <div class="modal-header">
-        <h4 class="modal-title pull-left">{{title}}</h4>
+        <h4 class="modal-title pull-left">{{isEdit? 'Edit Task': 'Create Task'}}</h4>
         <button type="button" class="btn-close close pull-right" aria-label="Close"
             (click)="modalService.modalRef?.hide()">
             <span aria-hidden="true" class="visually-hidden">&times;</span>
@@ -43,7 +43,6 @@
             <div class="card-tag-wrapper">
                 <h6 *ngFor="let tag of tags" class="card-tag">{{tag}}</h6>
             </div>
-
         </div>
         <div class="d-flex justify-content-center mt-3 modal-footer">
             <button type="submit" class="btn btn-primary w-50">Submit</button>
