--- a/src/app/components/task-card/task-card.component.html
+++ b/src/app/components/task-card/task-card.component.html
@@ -17,3 +17,6 @@
     <div class="card placeholder dndPlaceholder" dndPlaceholderRef>
     </div>
 </div>
+<ng-template #template>
+    <app-create-edit-modal [dataToEdit]="dataToEdit"/>
+</ng-template>
