title now is updated properly

--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,7 +1,7 @@
 <main class="container-fluid">
     <div class="wrapper">
         <div class="column-wrapper" *ngFor="let data of columnData">
-            <app-column-title [title]="data.title" (editedTitle)="handleEdit($event)" />
+            <app-column-title [title]="data.title" [id]="data.id" (editedTitle)="handleEdit($event)" />
             <app-task-card [data]="data" />
             <app-add-new-task [columnId]="data.id"/>
         </div>
