--- a/src/app/components/column-title/column-title.component.sass
+++ b/src/app/components/column-title/column-title.component.sass
@@ -24,3 +24,14 @@
             padding-left: 0.5em
             padding-right: 0.5em
             border-radius: 1em
+    .more-btn-wrapper
+        margin-left: auto
+        padding-right: 1em
+        .more-btn
+            cursor: pointer
+            margin-right: auto
+            svg
+                display: block
+                height: 1.3em
+                width: 1.3em
+                margin-left: auto
