--- a/src/app/components/task-card/task-card.component.html
+++ b/src/app/components/task-card/task-card.component.html
@@ -1,6 +1,6 @@
 <div class="column-content" dndDropzone (dndDrop)="onDrop($event, data!.draggableItem)">
     <div class="card" *ngFor="let item of data?.draggableItem" [dndDraggable]="item"
-        [dndEffectAllowed]="'move'" (dndCanceled)="onDragged(item, data!.draggableItem, 'none')"
+        [dndEffectAllowed]="'move'" (dndCanceled)="onDragged(item, data!.draggableItem, 'none')"  (dndEnd)="onDragEnd($event)"
         (dndMoved)="onDragged(item, data!.draggableItem, 'move')">
         <div class="card-tag-wrapper">
             <h6 class="card-tag" *ngFor="let tag of item.content.tags">{{tag}}</h6>
