--- a/src/app/components/create-edit-modal/create-edit-modal.component.html
+++ b/src/app/components/create-edit-modal/create-edit-modal.component.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="d-flex justify-content-center mt-3 modal-footer">
-            <button type="submit" class="btn btn-primary w-50">Submit</button>
+            <button type="submit" class="btn btn-primary w-50">{{isEdit? 'Edit': 'Create'}}</button>
         </div>
     </form>
 </div>
