--- a/src/app/components/task-card/task-card.component.sass
+++ b/src/app/components/task-card/task-card.component.sass
@@ -26,6 +26,8 @@
     padding-top: 0.5em
 .card-title-wrapper
     display: flex
+.card-dates
+    color: green
 .dndPlaceholder
     min-height: 10em
     background-color: #fff
