--- a/src/app/components/card-btn/card-btn.component.html
+++ b/src/app/components/card-btn/card-btn.component.html
@@ -6,7 +6,7 @@
         </svg>
     </div>
     <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-        <li role="menuitem" class="dropdown-item" (click)="modalService.openModal(template)">Details</li>
+        <li role="menuitem" class="dropdown-item cursor-pointer" (click)="modalService.openModal(template)">Details</li>
         <li role="menuitem" class="dropdown-item" (click)="onEdit()">Edit</li>
         <li role="menuitem" class="dropdown-item" (click)="onDelete()">Delete</li>
     </ul>
