--- a/src/app/components/column-title/column-title.component.sass
+++ b/src/app/components/column-title/column-title.component.sass
@@ -29,3 +29,6 @@
                 height: 1.3em
                 width: 1.3em
                 margin-left: auto
+
+.dropdown-item
+    cursor: pointer
