--- a/src/app/components/create-edit-modal/create-edit-modal.component.sass
+++ b/src/app/components/create-edit-modal/create-edit-modal.component.sass
@@ -8,6 +8,7 @@
         border-radius: 1em
         padding: 0.3em
         color: purple
+        cursor: pointer
     .card-tag-wrapper
         padding-top: 1em
         display: flex
