--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,6 +1,8 @@
 @import styles/typography
 body
     background-color: #f8f8f8
+    .btn-primary
+        background-color: rgb(49, 60, 248)
     bs-datepicker-container
         z-index: 9999
         .bs-datepicker-head
