--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,9 +1,13 @@
 <main class="container-lg">
-    <div class="wrapper">
-        <div class="column-wrapper" *ngFor="let data of columnData">
+    <div class="wrapper" [dndHorizontal]="true" [dndDisableIf]="toDoService.activeDropZone === 'Task'" dndDropzone (dndDrop)="toDoService.onDrop($event, columnData)">
+        <div class="column-wrapper" *ngFor="let data of columnData" [dndDraggable]="data" [dndEffectAllowed]="'move'"
+            (dndCanceled)="toDoService.onDragged(data, columnData, 'none')" (dndEnd)="toDoService.onDragEnd($event)"
+            (dndMoved)="toDoService.onDragged(data, columnData, 'move')" (dndStart)="toDoService.onDragStart($event, 'Column')">
             <app-column-title [title]="data.title" [id]="data.id" (editedTitle)="handleEdit($event)" />
             <app-task-card [data]="data" [columnData]="columnData" (modifyData)="handleEdit($event)" />
-            <app-add-new-task [columnId]="data.id"/>
+            <app-add-new-task [columnId]="data.id" />
+        </div>
+        <div class="placeholder dndPlaceholder" dndPlaceholderRef>
         </div>
     </div>
 </main>
